--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           <div class="menu_item push_button_pressed" id="tool_rulers">View Rulers</div>
           <div class="menu_item" id="tool_wireframe">View Wireframe</div>
           <div class="menu_item" id="tool_snap">Snap to Grid</div>
-          <div class="separator"></div>
-          <div class="menu_item" id="tool_source">Source... <span class="shortcut">⌘U</span></div>
+          <!--<div class="separator"></div>
+          <div class="menu_item" id="tool_source">Source... <span class="shortcut">⌘U</span></div>-->
         </div>
       </div>
 
