Update colorpicker theme

--- a/index.html
+++ b/index.html
@@ -29,17 +29,38 @@
       background: inherit;
     }
 
+    #svg_editor .jPicker td.Radio input {
+      margin: 0 4px 0 0;
+    }
+
+    div.jGraduate_StopSlider {
+      background: transparent;
+    }
+
     .jGraduate_tabs,
     div.jGraduate_Form_Section {
       background-color: rgba(255, 255, 255, 0.25);
     }
 
-    li.jGraduate_tab_current {
-      background-color: rgba(255, 255, 255, 0.35);
+    #color_picker label {
+      color: inherit;
     }
 
-    div.jGraduate_StopSlider {
-      background: transparent;
+    #color_picker input[type=text],
+    #color_picker input[type=number] {
+      color: inherit;
+      background: rgb(0, 0, 0, 0.15);
+      border: 1px solid rgb(0, 0, 0, 0.25);
+    }
+
+    #svg_editor .jPicker td.Text input {
+      color: inherit;
+      background: rgb(255, 255, 255, 0.15);
+      border: inherit;
+    }
+
+    li.jGraduate_tab_current {
+      background-color: rgba(255, 255, 255, 0.35);
     }
 
     #menu_bar {
